fixed spacing issues and removed navigation in mobile

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+* {
+	box-sizing: border-box;
+}
+
 html,
 body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "Gurmukhi MT";
     background: var(--v-color-background);
 }
 
